# knn

./: .gitignore  CLI.cpp  CLI.h  CMakeLists.txt  Classifier.cpp  Classifier.h  Client.cpp  ClientCheck.cpp  ClientTry.cpp  Data.cpp  Data.h  DefaultIO.h  DefaultIO.hpp  Iris.cpp  Iris.h  IrisNode.cpp  IrisNode.h  QueueToSocketIO.cpp  QueueToSocketIO.h  README.md  Server.cpp  ServerCheck.cpp  ServerTry.cpp  SocketIO.cpp  SocketIO.h  SocketToQueue.cpp  SocketToQueue.h  StandardIO.cpp  StandardIO.h  StandardIO.hpp  TcpServer.cpp  UdpServer.cpp  knn.cpp  udpRegularClient.cpp  udpServer.cpp
Commands/: ClassifyingCommand.cpp  ClassifyingCommand.h  ClassifyingCommand.hpp  Command.h  Command.hpp  ConfusionMatrixCommand.cpp  ConfusionMatrixCommand.h  ConfusionMatrixCommand.hpp  DownloadCommand.cpp  DownloadCommand.h  DownloadCommand.hpp  PrintingCommand.cpp  PrintingCommand.h  PrintingCommand.hpp  SettingsCommand.cpp  SettingsCommand.h  SettingsCommand.hpp  UploadCommand.cpp  UploadCommand.h  UploadCommand.hpp
files/: Unclassifirere.csv
